2009-11-05  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/ld-script.el (auto-mode-alist):
	* vc-hooks.el (vc-directory-exclusion-list): Purecopy strings.

	* cus-face.el (custom-declare-face): Purecopy face spec.

2009-11-06  Kenichi Handa  <handa@m17n.org>

	* international/uni-bidi.el: Re-generated.
	* international/uni-category.el: Re-generated.
	* international/uni-combining.el: Re-generated.
	* international/uni-mirrored.el: Re-generated.

2009-11-05  Dan Nicolaescu  <dann@ics.uci.edu>

	* textmodes/tex-mode.el (tex-alt-dvi-print-command)
	(tex-dvi-print-command, tex-bibtex-command, tex-start-commands)
	(tex-start-options, slitex-run-command, latex-run-command)
	(tex-run-command, tex-directory):
	* textmodes/ispell.el (ispell-html-skip-alists)
	(ispell-tex-skip-alists, ispell-tex-skip-alists):
	* textmodes/fill.el (adaptive-fill-first-line-regexp):
	(adaptive-fill-regexp):
	* textmodes/dns-mode.el (auto-mode-alist):
	* progmodes/python.el (interpreter-mode-alist):
	* progmodes/etags.el (tags-compression-info-list):
	* progmodes/etags.el (tags-file-name):
	* net/browse-url.el (browse-url-galeon-program)
	(browse-url-firefox-program):
	* mail/sendmail.el (mail-signature-file)
	(mail-citation-prefix-regexp):
	* international/mule-conf.el (eight-bit):
	* international/latexenc.el (latex-inputenc-coding-alist):
	* international/fontset.el (x-pixel-size-width-font-regexp):
	* emacs-lisp/warnings.el (warning-type-format):
	* emacs-lisp/trace.el (trace-buffer):
	* emacs-lisp/lisp-mode.el (lisp-interaction-mode-map)
	(emacs-lisp-mode-map):
	* calendar/holidays.el (holiday-solar-holidays)
	(holiday-bahai-holidays, holiday-islamic-holidays)
	(holiday-christian-holidays, holiday-hebrew-holidays)
	(hebrew-holidays-4, hebrew-holidays-3, hebrew-holidays-2)
	(hebrew-holidays-1, holiday-oriental-holidays)
	(holiday-general-holidays):
	* x-dnd.el (x-dnd-known-types):
	* tool-bar.el (tool-bar):
	* startup.el (site-run-file):
	* shell.el (shell-dumb-shell-regexp):